--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,36 @@
 body {
 
     background-image: url('../images/bg.jpg');
+    background-attachment: fixed;
+
+}
+#basicContainer {
+
+    background-color: rgba(245, 245, 245, 0.5);
+    border: 2px solid #b3b3b3;
+    border-radius: 5px;
+    padding: 60px 60px 30px 60px;
+
+}
+#basicContainerCatalog {
+    background-color: rgba(245, 245, 245, 0.5);
+    border: 2px solid #b3b3b3;
+    border-radius: 5px;
+    padding: 60px 60px 30px 60px;
+
+}
+
+#row{
+
+}
+
+#cell
+{
+
+    width:130px;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 25px;
 
 }
 
