--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,7 +13,7 @@
         <script src="@routes.Assets.versioned("javascripts/bootstrap.js")" type="text/javascript"></script>
     </head>
     <body>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -23,7 +23,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="/home">
                         <img alt="Brand" src="@routes.Assets.versioned("images/logo.gif")">
                     </a>
 
@@ -31,8 +31,8 @@
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Catalogo <span class="sr-only">(current)</span></a></li>
+                    <ul class="nav navbar-nav ">
+                        <li class="active"><a href="/catalog">Catalogo <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Link</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
