--- a/app/views/product.scala.html
+++ b/app/views/product.scala.html
@@ -6,8 +6,13 @@
 *@
 @main("Product"){
 
-  <div class="container  col-md-6 col-md-offset-3" >
+  <div class="container  col-md-6 col-md-offset-3" id="basicContainer" >
     <script type='text/javascript' src='@routes.Assets.versioned("js/index.js")'> </script>
+
+    <h1>Registro de Producto </h1>
+    <p>
+      Por favor ingrese la informacion del producto que se desplegara en el catalogo como producto disponible.
+    </p>
 
 
     <form action="@routes.UserController.addUser()" method="post" class="form-horizontal">
