--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -5,6 +5,7 @@ body {
 
 }
 #basicContainer {
+    margin-top: 80px;
 
     background-color: rgba(245, 245, 245, 0.5);
     border: 2px solid #b3b3b3;
@@ -13,6 +14,7 @@ body {
 
 }
 #basicContainerCatalog {
+    margin-top: 80px;
     background-color: rgba(245, 245, 245, 0.5);
     border: 2px solid #b3b3b3;
     border-radius: 5px;
