--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,7 +6,7 @@
 *@
 @main("index"){
 
-    <div class="container  col-md-6 col-md-offset-3" >
+    <div class="container  col-md-6 col-md-offset-3"  id="basicContainer" >
         <script type='text/javascript' src='@routes.Assets.versioned("js/index.js")'> </script>
 
 
