Se agregan los templates de gestionarProducto, Usuario, Pago ademas de la carga de los productos en el catalogo

--- a/app/views/catalog.scala.html
+++ b/app/views/catalog.scala.html
@@ -7,7 +7,7 @@
 @main("Catalog"){
 
   <div class="container  col-md-8 col-md-offset-2"  id ="basicContainerCatalog">
-    <script type='text/javascript' src='@routes.Assets.versioned("js/index.js")'> </script>
+    <script type='text/javascript' src='@routes.Assets.versioned("js/products.js")'> </script>
 
     <div id="row">
     <div class="polaroid col-md-3 col-md-offset-1" id="cell">
