--- a/app/views/gestionarUser.scala.html
+++ b/app/views/gestionarUser.scala.html
@@ -1,8 +1,8 @@
-@(gestionarProduct: Form[Product]))
+@(gestionarUsuario: Form[User]))
 
 
 @main("Product"){
-
+  
   <div class="container  col-md-6 col-md-offset-3" id="basicContainer" >
     <script type='text/javascript' src='@routes.Assets.versioned("js/products.js")'> </script>
 
