--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -25,6 +25,14 @@ body {
 #row{
 
 }
+.splitimage{
+    max-height:100%;
+    max-width:100%;
+    width:60%;
+    height:auto;
+    margin-top: 10px;
+    margin-left: 20px;
+}
 
 #cell
 {
@@ -33,6 +41,7 @@ body {
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 25px;
+    border-radius: 5px;
 
 }
 
