--- a/app/views/user.scala.html
+++ b/app/views/user.scala.html
@@ -25,9 +25,8 @@
         class="form-control"
         placeholder="Email"
         aria-describedby="basic-addon1"
-        name="name"
-        id="id"
-        value="">
+        name="email"
+        >
         </div>
       </div>
       <div class="form-group">
@@ -37,9 +36,8 @@
         class="form-control"
         placeholder="Nombre de Usuario"
         aria-describedby="basic-addon1"
-        name="name"
-        id=".id"
-        value="">
+        name="username"
+        >
         </div>
         </div>
       <div class="form-group">
@@ -49,9 +47,8 @@
         class="form-control"
         placeholder="Contraseña"
         aria-describedby="basic-addon1"
-        name="name"
-        id="id"
-        value="">
+        name="pass"
+        >
         </div>
         </div>
       <div class="form-group">
@@ -61,9 +58,8 @@
         class="form-control"
         placeholder="Contraseña"
         aria-describedby="basic-addon1"
-        name=".name"
-        id="id"
-        value="">
+        name="passconf"
+        >
         </div>
         </div>
       @* <input type="text" name="name" />*@
