--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -44,4 +44,10 @@ body {
     border-radius: 5px;
 
 }
-
+.footer {
+    position: absolute;
+    bottom:0;
+    width: 100%;
+    height: 30px;
+    background-color: rgba(245, 245, 245, 0.5);
+}
