--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11,6 +11,7 @@ body {
     border: 2px solid #b3b3b3;
     border-radius: 5px;
     padding: 60px 60px 30px 60px;
+    argin-bottom: 80px;
 
 }
 #basicContainerCatalog {
@@ -19,6 +20,7 @@ body {
     border: 2px solid #b3b3b3;
     border-radius: 5px;
     padding: 60px 60px 30px 60px;
+    margin-bottom: 80px;
 
 }
 
@@ -44,10 +46,14 @@ body {
     border-radius: 5px;
 
 }
-.footer {
-    position: absolute;
-    bottom:0;
-    width: 100%;
-    height: 30px;
+footer {
+
+    clear: both;
+    position: relative;
+    z-index: 10;
+    height: 2em;
+    margin-top: -3em;
     background-color: rgba(245, 245, 245, 0.5);
+    text-align: center;
+    padding-top: 5px;
 }
