--- a/app/views/includes/userMenu.scala.html
+++ b/app/views/includes/userMenu.scala.html
@@ -1,12 +1,12 @@
 @if(session.get("connected")== null){
   <ul class="dropdown-menu">
-    <li><a href="#">Ingresar</a></li>
+    <li><a href="/">Ingresar</a></li>
   </ul>
 } else {
   <ul class="dropdown-menu">
     <li><a href="#">Perfil</a></li>
     <li role="separator" class="divider"></li>
-    <li><a href="#">Salir</a></li>
+    <li><a href="@controllers.routes.LoginController.logout()">Salir</a></li>
   </ul>
 
 
