--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -34,9 +34,8 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav ">
                         <li class="active"><a href="/catalog">Catalogo <span class="sr-only">(current)</span></a></li>
-                        <li><a href="/">Login</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
                             @includes.userMenu()
 <!--
                             <ul class="dropdown-menu">
@@ -51,12 +50,6 @@
                             -->
                         </li>
                     </ul>
-                    <form class="navbar-form navbar-left">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search">
-                        </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="@controllers.routes.UserController.load()">Registro</a></li>
                         <li><a href="@controllers.routes.ProductController.loadProduct()">Carrito</a></li>
